ATLAS-2518: Improve Permission loading to one query